# mochi

./: AdaptiveScanline.py  Mocchi.py  README.md  demo.py  demoSPH.py  demoSWIFT.py  demoSource.py  demoVoronoiMesh.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
Mochi/: AdaptiveScanline.py  Interpolants.py  MochiCore.py  PostProcessing.py  RT_direct.txt  RadiativeTransfer.py  ScanlineHI.py  __init__.py  mochiUtils.py
Mochi/postprocessing/: cardhandler.py
src/Mochi/: AdaptiveScanline.py  Interpolants.py  MochiCore.py  PostProcessing.py  RadiativeTransfer.py  ScanlineHI.py  __init__.py  mochiUtils.py
src/Mochi/PostProcessing/: __init__.py  cardhandler.py  convolve.py  noise.py  unitconvert.py  utils.py
src/Mochi/postprocessing/: cardhandler.py
tests/: testSource.py  test_mass_conservation.py
