[metadata]
name = mochi
description = mock observation cubes in HI
author = Mathieu Perron-Cormier

[options]
package_dir =
	=src
packages = find:
install_requires =
	numpy
	astropy
	scikit-learn
	opencv-python
python_requires = >= 3.9
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
	pytest >= 6.0